--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="de">
 
 <head>
   <meta charset="UTF-8">
@@ -14,10 +14,21 @@
 
 <body>
   <div class="site-container">
-    @include('partials/header.html')
-    <img src="img/cover.jpg" alt="Обложка" style="width: 100%;">
+    @include('partials/notice.html', {
+    "sub_class": "notice--orange",
+    "text": "Unsere deutschen Geschäfte sind nun wieder regulär oder per Terminvereinbarung geöffnet.",
+    "link": true,
+    "link_text": "Aktuelle Informationen zu unseren Geschäften",
+    })
+    @include('partials/notice.html', {
+    "sub_class": "notice--black",
+    "text": "Wir bieten kostenfreien Versand nach Deutschland und Österreich an.",
+    "link": false,
+    })
+    <main>
+      @include('partials/main.html')
+    </main>
     @include('partials/footer.html')
-    <!-- @include('html/h1.html') пример инклуда -->
   </div>
   <script src="js/vendor.js"></script>
   <script src="js/main.js"></script>
