Закончил первую секцию, начал работу над второй секцией

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
     })
     <main>
       @include('partials/main.html')
+      @include('partials/demonstration.html')
     </main>
     @include('partials/footer.html')
   </div>
