Закончил работу над второй секцией

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     })
     <main>
       @include('partials/main.html')
-      @include('partials/demonstration.html')
+      @include('partials/demo.html')
     </main>
     @include('partials/footer.html')
   </div>
