--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 
 <body>
   <div class="site-container">
+    @include('partials/preloader.html')
     @include('partials/notice.html', {
     "sub_class": "notice--orange",
     "text": "Unsere deutschen Geschäfte sind nun wieder regulär oder per Terminvereinbarung geöffnet.",
