глобальный рефакторинг (под gulp_dr)

--- a/src/index.html
+++ b/src/index.html
@@ -1,61 +1,52 @@
 <!DOCTYPE html>
 <html lang="de">
 
-<head>
-  @include('partials/favicon.html')
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="theme-color" content="#111111">
-  <title>Aesop</title>
-  <link rel="stylesheet" href="css/vendor.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
+@include('partials/head.html', {
+"stylesFileName": "index",
+"scriptsFileName": "index",
+"title": "Aesop",
+"font_urls": ["roboto-regular.woff2"]
+})
 
 <body>
-  <div class="site-container">
-    @include('partials/preloader.html')
-    @include('partials/notice.html', {
-    "sub_class": "notice--orange",
-    "text": "Unsere deutschen Geschäfte sind nun wieder regulär oder per Terminvereinbarung geöffnet.",
-    "link": true,
-    "link_text": "Aktuelle Informationen zu unseren Geschäften",
-    "plus_icon": false,
+  @include('partials/preloader.html')
+  @include('partials/notice.html', {
+  "sub_class": "notice--orange",
+  "text": "Unsere deutschen Geschäfte sind nun wieder regulär oder per Terminvereinbarung geöffnet.",
+  "link": true,
+  "link_text": "Aktuelle Informationen zu unseren Geschäften",
+  "plus_icon": false,
+  })
+  @include('partials/notice.html', {
+  "sub_class": "notice--black notice--plus",
+  "text": "Wir bieten kostenfreien Versand nach Deutschland und Österreich an.",
+  "link": false,
+  "plus_icon": true,
+  })
+  <main class="main">
+    @include('partials/hero.html')
+    @include('partials/demo.html')
+    @include('partials/slider.html')
+    @include('partials/info.html', {
+    "small_descr": true,
+    "small_descr_text": "Vitamin C für Tag und Nacht",
+    "title": "Um die Struktur der Haut zu unterstützen",
+    "descr": "Vitamin C ist essentiell, um die Widerstandsfähigkeit der Haut zu erhöhen. Der effektive Inhaltsstoff kann sowohl morgens als auch abends angewendet werden und bietet bei langfristiger, regelmäßiger Anwendung enorme Vorteile für die Haut.",
+    "img": "@img/3.png",
+    "btn_text": "Erfahren Sie mehr über Vitamin C"
     })
-    @include('partials/notice.html', {
-    "sub_class": "notice--black notice--plus",
-    "text": "Wir bieten kostenfreien Versand nach Deutschland und Österreich an.",
-    "link": false,
-    "plus_icon": true,
+    @include('partials/slider.html')
+    @include('partials/info.html', {
+    "small_descr": false,
+    "small_descr_text": "",
+    "title": "Wir heißen Sie online willkommen",
+    "descr": "Genau wie in unsere Geschäften, in denen wir unsere Kunden persönlich begrüßen dürfen, möchten wir dies auch in unserem Online-Store tun. Es ist uns eine Freude, Ihnen virtuelle Unterstützung durch unsere Consultants und passende Lieferoptionen anzubieten.",
+    "img": "@img/4.png",
+    "btn_text": "Hilfe"
     })
-    <main>
-      @include('partials/main.html')
-      @include('partials/demo.html')
-      @include('partials/slider.html')
-      @include('partials/info.html', {
-      "small_descr": true,
-      "small_descr_text": "Vitamin C für Tag und Nacht",
-      "title": "Um die Struktur der Haut zu unterstützen",
-      "descr": "Vitamin C ist essentiell, um die Widerstandsfähigkeit der Haut zu erhöhen. Der effektive Inhaltsstoff kann sowohl morgens als auch abends angewendet werden und bietet bei langfristiger, regelmäßiger Anwendung enorme Vorteile für die Haut.",
-      "img": "img/3.png",
-      "btn_text": "Erfahren Sie mehr über Vitamin C"
-      })
-      @include('partials/slider.html')
-      @include('partials/info.html', {
-        "small_descr": false,
-        "small_descr_text": "",
-        "title": "Wir heißen Sie online willkommen",
-        "descr": "Genau wie in unsere Geschäften, in denen wir unsere Kunden persönlich begrüßen dürfen, möchten wir dies auch in unserem Online-Store tun. Es ist uns eine Freude, Ihnen virtuelle Unterstützung durch unsere Consultants und passende Lieferoptionen anzubieten.",
-        "img": "img/4.png",
-        "btn_text": "Hilfe"
-      })
-      @include('partials/quote.html')
-    </main>
-    @include('partials/footer.html')
-  </div>
-  <script src="js/vendor.js"></script>
-  <script src="js/main.js"></script>
+    @include('partials/quote.html')
+  </main>
+  @include('partials/footer.html')
 </body>
 
 </html>
